<resources>
    <string name="app_name">MarketApp</string>
    <string name="form">Formulario</string>
    <string name="send">Enviar</string>
    <string name="personal_info">Digite su nombre y apellido</string>
    <string name="document">Digite su numero de doc.</string>
    <string name="warning_empty">Complete los campos</string>

    <!-- Pantalla de Inicio de sesion -->
    <string name="fragment_login_title">Iniciar sesion</string>
    <string name="Fragment_login_email">Correo electronico</string>
    <string name="Fragment_login_password">Contraseña</string>
    <string name="Fragment_login_signIn">Ingresar</string>
    <string name="fragment_login_forgetPassword">¿Olvide mi contraseña?</string>
    <string name="fragment_login_newAccount">Crear cuenta</string>
    <string name="fragment_login_rememberAccount">Recordar mi cuenta</string>
    <string name="Fragment_register_names">Nombres</string>
    <string name="Fragment_register_surname">Apellidos</string>
    <string name="Fragment_register_email">Correo</string>
    <string name="Fragment_register_phone">Celular</string>
    <string name="Fragment_register_gender">Genero</string>
    <string name="Fragment_fragment_document_number">Numero de documento</string>
    <string name="Fragment_register_terms">Aceptar terminos y condiciones</string>
    <string name="Fragment_register_register">Registrar</string>
    <string name="fragment_register_title">Crear cuenta</string>
    <string name="fragment_register_validation_names">Debe ingresar nombres</string>
    <string name="fragment_login_validation">Complete el campo</string>
    <string name="menu_categories">Categorias</string>
    <string name="menu_history">Historial</string>
    <string name="menu_welcome">Bienvenido</string>
    <string name="menu_orders">Ordenes</string>
    <string name="fragment_detail_product_features">Caracteristicas</string>
    <string name="menu_add_categories">Registrar Categorias</string>
    <string name="fragment_add_category_name">Ingrese nombre de categoria</string>
    <string name="fragment_add_category_camera">Camara</string>
    <string name="fragment_add_category_galery">Galeria</string>
    <string name="fragment_add_category_upload">Cargar</string>
    <string name="menu_maps">mapas</string>
    <string name="message_version">Hay una nueva version desea actualizarla?</string>
    <string name="dialog_version_late">Mas tarde</string>
    <string name="dialog_version_update">Actualizar</string>
    <string name="fragment_detail_product_plus">+</string>
    <string name="fragment_detail_product_minus">-</string>
    <string name="fragment_detail_product_quantity">Und.</string>
    <string name="fragment_detail_product_add">Agregar</string>
    <string name="fragment_detail_product_feat_description">Caracteristicas</string>
    <string name="fragment_detail_product_price">Precio</string>
    <string name="fragment_detail_product_title">Titulo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fragment_payment_process">Realizar Pago</string>
    <string name="Fragment_payment_address">Direccion</string>
    <string name="Fragment_payment_reference">Referencia</string>
    <string name="Fragment_payment_district">Distrito</string>
    <string name="Fragment_payment_home">Casa</string>
    <string name="Fragment_payment_other">Otro</string>
    <string name="Fragment_payment_office">Oficina</string>
    <string name="Fragment_payment_send_date">Fecha y hora de envio</string>
    <string name="Fragment_payment_hour">Hora</string>
    <string name="Fragment_payment_date">Fecha</string>
    <string name="Fragment_payment_send_type">Tipo de pago</string>
    <string name="Fragment_payment_amount">Monto con el que va a pagar</string>
    <string name="dialog_payment_accept">Aceptar</string>
    <string name="dialog_payment_congrats">Felicitaciones</string>
    <string name="dialog_payment_message">En hora buena! Su compra se registro correctamente</string>
    <string name="dialog_payment_order">Orden de compra:</string>
    <string name="Fragment_payment_yape">Yape</string>
    <string name="Fragment_payment_plin">Plin</string>
    <string name="Fragment_payment_cash">Efectivo</string>

</resources>